# octs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: chunks.rs  error.rs  impl_bytes.rs  lib.rs  read.rs  std_io.rs  test.rs  varint.rs  write.rs
src/prim/: bool.rs  error.rs  mod.rs  nonzero.rs  num.rs  unit.rs  zero_sized.rs
src/std_io/: mod.rs  read.rs  write.rs
src/varint/: error.rs  mod.rs
tests/: test.rs
