[package]
description = "Finally, a good byte manipulation library"
name = "octs"
version = "0.2.1"

authors = ["aecsocket <aecsocket@tutanota.com>"]
categories = ["network-programming", "data-structures"]
edition = "2021"
keywords = ["network", "bytes", "io"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aecsocket/octs"
rust-version = "1.76.0"

[lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

module_name_repetitions = "allow"

[features]
default = ["std"]

std = ["bytes/std"]

i128 = []

[dependencies]
bytes = { version = "1.6.0", default-features = false }
