[package]
description = "Finally, a good byte manipulation library"
name = "octs"
version = "1.0.0"

authors = ["aecsocket <aecsocket@tutanota.com>"]
categories = ["network-programming", "data-structures"]
edition = "2021"
keywords = ["network", "bytes", "io"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aecsocket/octs"
rust-version = "1.81.0"

[lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

module_name_repetitions = "allow"

[features]
default = ["std"]

i128 = []
std = ["bytes/std"]

[dependencies]
bytes = { version = "1.7.2", default-features = false }
